Added ComputeKernel.SetLocalArgument().
Added ComputeSampler.ToString().
Added check to prevent modifying of read-only event collections of events passed as arguments to ComputeCommandQueue methods.
Added extensions cl_khr_migrate_memobject and cl_khr_icd.

Bugfixes:
CL10.CreateImage3D() calls clCreateImage2D().
Missing Cloo.xml documentation file.

Internals:
Reformatted Clootils code to match Visual Studio default formatting.
ComputeProgram.Build() won't prevent from building the same program multiple times anymore.   

Documentation:
Revised documentation for most of the public bits of the library.
Added doxygen generated documentation.


[0.7.2] -----------------------------------------------------------------------
Breaking changes:
None.

New functionality:
None.

Bugfixes:
Changing platform in Clootils configuration doesn't update device list.
Clootils crash on certain device selections for multidevice platforms.
Clootils syntax checking cripples source before sending it to the compiler.

Internals:
Reformatted Cloo source to match Visual Studio default formatting.

Documentation:
None.


[0.7.1] -----------------------------------------------------------------------
Breaking changes:
Removed ComputeContextPropertyList.Platform property.
Renamed ComputeCommandQueue.Execute( kernel, events ) to ExecuteTask.

New functionality:
Added a bunch of overload methods to ComputeCommandQueue that default hidden parameters to safe values.
Added ComputeBuffer contstructor that accepts a pointer to the data to initialize the buffer with.
Added ComputeContext.Platform property.
Added ComputeContextPropertyList.GetByName() method.
Added ComputeMemoryFlags.None token.

Bugfixes:
ComputeContextPropertyList.properties field stays null after constructor run.
ComputeBuffer constructor creates zero-sized buffer.

Internals:
None.

Documentation:
Documented new overloads in ComputeCommandQueue.


[0.7.0] -----------------------------------------------------------------------